# laklab_mouseloader

./: .gitignore  CLAUDE.md  README.md  align_ephysbeh.py  analysis_fns.py  beh.py  ephys.py  generate_setup_file.py  load_exp.py  playground.ipynb  pyproject.toml  req.txt  setup.py
lak_exp/: __init__.py  align_imgbeh.py  analysis_fns.py  analysis_fns_2p.py  batch_run.py  beh.py  decoding.py  dset_twop.py  exp_defs.py  histology.py  load_exp_twop.py
lak_exp/cmd_line_tools/: beh_check.py
laklab_mouseloader/: #analysis_fns_2p.py#  #load_exp_twop.py#  #signal_correction.py#  .#load_exp_twop.py  __init__.py  analysis_fns_2p.py  beh.py  decoding.py  decoding_twop.py  load_exp_twop.py  regression_tools.py  signal_correction.py  utils_twop.py
laklab_mouseloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
laklab_mouseloader/cmd_line_tools/: beh_check.py  beh_check.sh
npixloader/: #analysis_fns.py#  .#analysis_fns.py  __init__.py  align_ephysbeh.py  align_imgbeh.py  analysis_fns.py  analysis_fns_2p.py  beh.py  decoding.py  dset.py  dset_twop.py  ephys.py  histology.py  load_exp.py  load_exp_twop.py  plt_beh.py  regression_tools.py  utils.py  utils_twop.py
npixloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
npixloader/cmd_line_tools/: beh_check.py  beh_check.sh
